2020-07-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha07: Interleave';git push
 	git tag -a 4.9.4-alpha07 -m 'ncra/ncrcat: ILV API;ncks baa 5,6 = ppc bit round, half-shave;';git push --tags

	* Update NSD=3 regression test to select Bit Grooming

	* New interleave API appears to work for ncrcat/ncra single and multiple files!

2020-07-21  Charlie Zender  <zender@sastrugi.local>

	* Eliminate deprecated or un-used MRO specification via 'm' or 'M' as sixth hyperslab argument

	* Change interleave API from --ilv -d dmn,srt,cnt,ilv=srd=ssc to -d dmn,srt,cnt,srd,ssc,ilv

2020-07-19  Charlie Zender  <zender@uci.edu>

	* Re-considering ilv implementation and final diurnal strategy

	* ncra interleave (flg_ilv) always implies multi-record-output (flg_mro)

2020-07-17  Charlie Zender  <zender@uci.edu>

	* Adjust diagnostic count (cnt) for interleaving (do not divide span by stride)

	* ncrcat interleaving invoked as either stride-only and stride-ssc work identically for multiple files

	* Merge Kouznetsov's implementation of Milan Klower's integer-math-only version of nearest neighbor rounding into the new default bit-adjustment-algorithm (BAA) #5

2020-07-16  Charlie Zender  <zender@uci.edu>

	* ncra/ncrcat: Implement stride resets over interleaved dimension, works for multiple files!

2020-07-15  Charlie Zender  <zender@uci.edu>

	* Change default Bit-Adjustment Algorithm from Bit Grooming to Bit Rounding

	* Merge Kouznetsov's bit-adjustment-algorithm (BAA) #6 half-shaving quantization algorithmw

2020-07-13  Charlie Zender  <zender@uci.edu>

	* Implement double precision version of Kouznetsov's round-to-nearest quantization

2020-07-11  Charlie Zender  <zender@uci.edu>

	* Merge Rostislav Kouznetsov (rkouznetsov) bit-adjustment-algorithm (BAA) #5 bit-rounding quantization algorithm

2020-07-09  Charlie Zender  <zender@uci.edu>

	* Add flg_ilv to lmt_sct so srt and end can depend on srd
