@@ -1,3 +1,7 @@
+2020-07-23  Charlie Zender  <zender@uci.edu>
+
+	* Fix ILV record counters when multiple SSCs within one file
+
 2020-07-22  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.4-alpha07 release procedure:
